--- a/displayYourLocation.html
+++ b/displayYourLocation.html
@@ -42,6 +42,7 @@
             map: map,
             center: [-40, 28], // Longitude, latitude
             zoom: 2, // Zoom level
+            container: "viewDiv" // Div element
             });
 
             const locate = new Locate({
