--- a/displayYourLocation.html
+++ b/displayYourLocation.html
@@ -36,7 +36,7 @@
             esriConfig.apiKey = "AAPK6a7fbbd47cc543beb5dd6f9dca65c788i4dAOKVZEHmUy1heCU7lV7w1AVMdIaV7oMkMvfEwTAmxqpzRDBzcxSvGImZHSQ6u";
 
             const map = new Map({
-            basemap: "arcgis-tnavigation" // Basemap layer service
+                basemap: "arcgis-navigation" // Basemap layer service
             });
             const view = new MapView({
             map: map,
@@ -54,9 +54,8 @@
           }
         });
         view.ui.add(locate, "top-left");
-  
         });
-      </script>
+    </script>
 
   </head>
   <body>
