--- a/displayYourLocation.html
+++ b/displayYourLocation.html
@@ -26,11 +26,12 @@
             "esri/Map", 
             "esri/views/MapView",
             "esri/widgets/Locate",
+
             ], function (
                 esriConfig,
                 Map, 
                 MapView,
-                Locate
+                Locate,
                 ) {
 
             esriConfig.apiKey = "AAPK6a7fbbd47cc543beb5dd6f9dca65c788i4dAOKVZEHmUy1heCU7lV7w1AVMdIaV7oMkMvfEwTAmxqpzRDBzcxSvGImZHSQ6u";
@@ -38,6 +39,7 @@
             const map = new Map({
                 basemap: "arcgis-navigation" // Basemap layer service
             });
+            
             const view = new MapView({
             map: map,
             center: [-40, 28], // Longitude, latitude
@@ -46,14 +48,16 @@
             });
 
             const locate = new Locate({
-          view: view,
-          useHeadingEnabled: false,
-          goToOverride: function(view, options) {
-            options.target.scale = 1500;
-            return view.goTo(options.target);
+            view: view,
+            useHeadingEnabled: false,
+            goToOverride: function(view, options) {
+                options.target.scale = 1500;
+                return view.goTo(options.target);
           }
         });
+
         view.ui.add(locate, "top-left");
+        
         });
     </script>
 
