--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -26,11 +26,11 @@
             esriConfig.apiKey = "AAPK6a7fbbd47cc543beb5dd6f9dca65c788i4dAOKVZEHmUy1heCU7lV7w1AVMdIaV7oMkMvfEwTAmxqpzRDBzcxSvGImZHSQ6u";
 
             const map = new Map({
-            basemap: "arcgis- mid century style" // Basemap layer service
+            basemap: "arcgis-topographic" // Basemap layer service
             });
             const view = new MapView({
              map: map,
-            center: [43.97884836756593, 15.384658581550308], // Longitude, latitude
+            center: [43.978306123742975, 15.383492054344085], // Longitude, latitude
             zoom: 8, // Zoom level
             container: "viewDiv" // Div element
             });
