--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -26,7 +26,7 @@
             esriConfig.apiKey = "AAPK6a7fbbd47cc543beb5dd6f9dca65c788i4dAOKVZEHmUy1heCU7lV7w1AVMdIaV7oMkMvfEwTAmxqpzRDBzcxSvGImZHSQ6u";
 
             const map = new Map({
-            basemap: "arcgis-topographic" // Basemap layer service
+            basemap: "arcgis-oceans" // Basemap layer service
             });
             const view = new MapView({
              map: map,
