--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -21,7 +21,11 @@
 
     <!-- to load the Map and MapView module-->
     <script>
-        require(["esri/config","esri/Map", "esri/views/MapView"], function (esriConfig,Map, MapView) {
+        require([
+            "esri/config",
+            "esri/Map", 
+            "esri/views/MapView"
+        ], function (esriConfig,Map, MapView) {
 
             esriConfig.apiKey = "AAPK6a7fbbd47cc543beb5dd6f9dca65c788i4dAOKVZEHmUy1heCU7lV7w1AVMdIaV7oMkMvfEwTAmxqpzRDBzcxSvGImZHSQ6u";
 
@@ -30,7 +34,7 @@
             });
             const view = new MapView({
              map: map,
-            center: [43.978306123742975, 15.383492054344085], // Longitude, latitude
+            center: [15.383492054344085, 43.978306123742975], // Longitude, latitude
             zoom: 8, // Zoom level
             container: "viewDiv" // Div element
             });
