--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -30,12 +30,12 @@
             esriConfig.apiKey = "AAPK6a7fbbd47cc543beb5dd6f9dca65c788i4dAOKVZEHmUy1heCU7lV7w1AVMdIaV7oMkMvfEwTAmxqpzRDBzcxSvGImZHSQ6u";
 
             const map = new Map({
-            basemap: "arcgis-oceans" // Basemap layer service
+            basemap: "arcgis-modern-antique" // Basemap layer service
             });
             const view = new MapView({
              map: map,
             center: [15.383492054344085, 43.978306123742975], // Longitude, latitude
-            zoom: 8, // Zoom level
+            zoom: 13, // Zoom level
             container: "viewDiv" // Div element
             });
   
