--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>Boat Rides Galesnjak</title>
+    <title>Boat Rides in Galesnjak Island</title>
 
     <!-- The viewDiv is the element displays the map and its CSS resets any browser settings -->
     <style>
@@ -25,7 +25,7 @@
             "esri/config",
             "esri/Map", 
             "esri/views/MapView", 
-            "esru/layer/FeatureLayer"
+            "esri/layer/FeatureLayer"
 
         ], function (esriConfig,Map, MapView, FeatureLayer) {
 
