--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -24,10 +24,10 @@
         require([
             "esri/config",
             "esri/Map", 
-            "esri/views/MapView", 
-            "esri/layer/FeatureLayer"
+            "esri/views/MapView"
+ 
 
-        ], function (esriConfig,Map, MapView, FeatureLayer) {
+        ], function (esriConfig,Map, MapView) {
 
             esriConfig.apiKey = "AAPK6a7fbbd47cc543beb5dd6f9dca65c788i4dAOKVZEHmUy1heCU7lV7w1AVMdIaV7oMkMvfEwTAmxqpzRDBzcxSvGImZHSQ6u";
 
@@ -40,13 +40,6 @@
             zoom: 13, // Zoom level
             container: "viewDiv" // Div element
             });
-
-            // Define a pop-up for galesnjak island
-            const popupisland = {
-            "title": "Galesnjak Island",
-            "content": "The fsurface area of this Island is 132 km^2. That is how much I love you :)"
-            }
-  
         });
       </script>
 
