--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -24,22 +24,42 @@
         require([
             "esri/config",
             "esri/Map", 
-            "esri/views/MapView"
+            "esri/views/MapView",
+            "esri/Graphic",
+            "esri/layers/GraphicsLayer"
  
 
-        ], function (esriConfig,Map, MapView) {
+        ], function (esriConfig,Map, MapView, Graphic, GraphicsLayer) {
 
             esriConfig.apiKey = "AAPK6a7fbbd47cc543beb5dd6f9dca65c788i4dAOKVZEHmUy1heCU7lV7w1AVMdIaV7oMkMvfEwTAmxqpzRDBzcxSvGImZHSQ6u";
 
             const map = new Map({
             basemap: "arcgis-modern-antique" // Basemap layer service
             });
+
             const view = new MapView({
              map: map,
             center: [15.383492054344085, 43.978306123742975], // Longitude, latitude
             zoom: 16, // Zoom level
             container: "viewDiv" // Div element
             });
+
+            const point = { //Create a point
+            type: "point",
+            longitude: 15.383492054344085,
+            latitude: 43.978306123742975
+            };
+
+            const simpleMarkerSymbol = {
+            type: "simple-marker",
+            color: [255, 204, 229],  // Orange
+            outline: {
+            color: [255, 255, 255], // White
+            width: 1
+            }
+            };
+
+ 
         });
       </script>
 
