--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -58,6 +58,11 @@
             width: 1
             }
             };
+            const pointGraphic = new Graphic({
+            geometry: point,
+            symbol: simpleMarkerSymbol
+            });
+            graphicsLayer.add(pointGraphic);
 
  
         });
