--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -54,7 +54,7 @@
 
             const simpleMarkerSymbol = {
             type: "simple-marker",
-            color: [255, 204, 229],  // Orange
+            color: [255, 204, 229],  // Baby Pink
             outline: {
             color: [255, 255, 255], // White
             width: 1
@@ -65,8 +65,9 @@
             content: "{Description}"
             }
             const attributes = {
+            color: [255, 204, 229],
             Name: "Galesnjak Island",
-            Description: "The area surface of this island is 132km^2. <br> I love you 100000000 times the area surface "
+            Description: "The area surface of this island is 132km^2. <br> I love you 100000000 times the area surface. "
             }
 
             const pointGraphic = new Graphic({
