--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -78,7 +78,215 @@
             popupTemplate: popupTemplate
             });
             graphicsLayer.add(pointGraphic);
-
+            
+            // Create a line geometry
+            const polyline = {
+            type: "polyline",
+            paths: [
+            [
+            15.383176803588865,
+            43.97928994910993
+          ],
+          [
+            15.383251905441282,
+            43.97943663600035
+          ],
+          [
+            15.383305549621582,
+            43.97957560219384
+          ],
+          [
+            15.383466482162476,
+            43.97976861025632
+          ],
+          [
+            15.383756160736086,
+            43.97996933797573
+          ],
+          [
+            15.384002923965456,
+            43.98018550553001
+          ],
+          [
+            15.38431406021118,
+            43.98033991044406
+          ],
+          [
+            15.384657382965086,
+            43.980447993645
+          ],
+          [
+            15.385258197784424,
+            43.980540636232035
+          ],
+          [
+            15.385676622390747,
+            43.980532916021964
+          ],
+          [
+            15.385923385620117,
+            43.9804865947405
+          ],
+          [
+            15.386213064193724,
+            43.980355350913385
+          ],
+          [
+            15.386427640914917,
+            43.980139183977485
+          ],
+          [
+            15.38654565811157,
+            43.97984581330563
+          ],
+          [
+            15.386620759963987,
+            43.97963736484209
+          ],
+          [
+            15.386567115783691,
+            43.979243626858725
+          ],
+          [
+            15.386492013931274,
+            43.97896569259252
+          ],
+          [
+            15.386373996734617,
+            43.978587391084055
+          ],
+          [
+            15.38628816604614,
+            43.97828629224247
+          ],
+          [
+            15.385998487472534,
+            43.97797747133164
+          ],
+          [
+            15.3858482837677,
+            43.97777673687828
+          ],
+          [
+            15.385419130325317,
+            43.97749107514004
+          ],
+          [
+            15.38509726524353,
+            43.97729805967404
+          ],
+          [
+            15.38480758666992,
+            43.97712048489118
+          ],
+          [
+            15.384389162063597,
+            43.97688886481111
+          ],
+          [
+            15.38411021232605,
+            43.9766804059666
+          ],
+          [
+            15.383970737457275,
+            43.97654915372606
+          ],
+          [
+            15.383702516555786,
+            43.97656459518118
+          ],
+          [
+            15.383219718933105,
+            43.97658775735633
+          ],
+          [
+            15.383101701736452,
+            43.976796216526125
+          ],
+          [
+            15.3828763961792,
+            43.97707416094744
+          ],
+          [
+            15.382565259933472,
+            43.97739842779466
+          ],
+          [
+            15.382264852523802,
+            43.977560560554195
+          ],
+          [
+            15.381428003311155,
+            43.97771497229456
+          ],
+          [
+            15.380816459655762,
+            43.977869383633376
+          ],
+          [
+            15.380355119705198,
+            43.978170484589135
+          ],
+          [
+            15.380054712295534,
+            43.978602832009145
+          ],
+          [
+            15.380033254623411,
+            43.979019735468384
+          ],
+          [
+            15.380183458328247,
+            43.97928222873725
+          ],
+          [
+            15.380505323410034,
+            43.97956788185828
+          ],
+          [
+            15.381041765213014,
+            43.979784050874215
+          ],
+          [
+            15.381417274475098,
+            43.97985353360503
+          ],
+          [
+            15.381857156753538,
+            43.97981493209795
+          ],
+          [
+            15.382189750671385,
+            43.97975316963441
+          ],
+          [
+            15.382511615753172,
+            43.97961420385652
+          ],
+          [
+            15.382747650146483,
+            43.97949067844758
+          ],
+          [
+            15.382940769195557,
+            43.97939031386359
+          ],
+          [
+            15.383230447769165,
+            43.97922818610027
+          ]
+            ]
+            };
+            const simpleLineSymbol = {
+            type: "simple-line",
+            color: [226, 119, 40], // Orange
+            width: 1
+            };
+            const polylineGraphic = new Graphic({
+            geometry: polyline,
+            symbol: simpleLineSymbol
+            });
+            graphicsLayer.add(polylineGraphic);
  
         });
       </script>
