--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -277,7 +277,7 @@
           ]
             ]
             };
-            const simpleLineSymbol = {
+            const simpleFillSymbol = {
             type: "simple-fill",
             color: [255, 204, 229, 0.5], // Baby pink with 50 percent transcparency
             outline: {
