--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -285,6 +285,12 @@
                 width: 2
             }
             };
+            const polygonGraphic = new Graphic({
+            geometry: polygon,
+            symbol: simpleFillSymbol,
+
+            });
+            graphicsLayer.add(polygonGraphic);
         });
       </script>
 
