--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>Boat Rides in Galesnjak Island</title>
+    <title>Boat Rides with Me! </title>
 
     <!-- The viewDiv is the element displays the map and its CSS resets any browser settings -->
     <style>
@@ -10,9 +10,7 @@
       body,
       #viewDiv {
         padding: 0;
-        margin: 0;
-        height: 100%;
-        width: 100%;
+        margin: 10px auto 10px auto;
       }
     </style>
     <!-- Add references to the eCSS file and JS library -->
