--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -10,7 +10,10 @@
       body,
       #viewDiv {
         padding: 0;
-        margin: 10px auto 10px auto;
+        margin: 0;
+        top: 40%;
+        height: 50%;
+        width: 50%;
       }
     </style>
     <!-- Add references to the eCSS file and JS library -->
