--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -9,10 +9,10 @@
       html,
       body,
       #viewDiv {
-        padding: 0;
-        margin: 0;
+        padding: 10px;
+        margin: 10px;
         top: 40%;
-        height: 50%;
+        height: 90%;
         width: 50%;
       }
     </style>
