--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -12,8 +12,9 @@
         padding: 10px;
         margin: 10px;
         top: 40%;
+        left: 50%;
         height: 90%;
-        width: 50%;
+        width: 90%;
       }
     </style>
     <!-- Add references to the eCSS file and JS library -->
