--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -9,12 +9,10 @@
       html,
       body,
       #viewDiv {
-        padding: 10px;
-        margin: 10px;
-        top: 40%;
-        left: 50%;
-        height: 90%;
-        width: 90%;
+        padding: 0;
+        margin: auto;
+        height: 60%;
+        width: 60%;
       }
     </style>
     <!-- Add references to the eCSS file and JS library -->
