--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -10,6 +10,7 @@
       body,
       #viewDiv {
         padding: 0;
+        top: 50%;
         margin: auto;
         height: 60%;
         width: 60%;
