--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -9,12 +9,10 @@
       html,
       body,
       #viewDiv {
-        padding: 0;
-        top: 50%;
-        margin: auto;
-        height: 60%;
-        width: 60%;
-      }
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        }
     </style>
     <!-- Add references to the eCSS file and JS library -->
     <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css">
