--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -9,9 +9,13 @@
       html,
       body,
       #viewDiv {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
+        width: 500px;
+        height: 400px;
+        top: 50%;
+        left: 50%;
+        position: absolute;
+        margin-top: -200px;
+        margin-left: -250px;
         }
     </style>
     <!-- Add references to the eCSS file and JS library -->
