--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -9,14 +9,19 @@
       html,
       body,
       #viewDiv {
-        width: 500px;
-        height: 400px;
+        width: 600px;
+        height: 600px;
         top: 50%;
         left: 50%;
         position: absolute;
         margin-top: -200px;
         margin-left: -250px;
         }
+
+      div{
+          background-color: rgb(255, 204, 204)
+        }  
+        
     </style>
     <!-- Add references to the eCSS file and JS library -->
     <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css">
