--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -18,10 +18,10 @@
         margin-left: -250px;
         }
 
-      div{
+      body {
           background-color: rgb(255, 204, 204)
         }  
-        
+
     </style>
     <!-- Add references to the eCSS file and JS library -->
     <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css">
