--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -7,20 +7,21 @@
     <!-- The viewDiv is the element displays the map and its CSS resets any browser settings -->
     <style>
       html,
-      body,
-      #viewDiv {
-        width: 600px;
-        height: 600px;
-        top: 50%;
-        left: 50%;
-        position: absolute;
-        margin-top: -200px;
-        margin-left: -250px;
-        }
+      body{
+        font-family: 'Courier New', Courier, monospace;
+        background-color: rgb(255, 204, 204);
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
 
-      body {
-          background-color: rgb(255, 204, 204)
-        }  
+      #viewDiv {
+        height: 80%;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        position: absolute;
+        }
 
     </style>
     <!-- Add references to the eCSS file and JS library -->
