--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -22,6 +22,18 @@
         margin-right: auto;
         position: absolute;
         }
+        
+      #present{
+          position: fixed;
+                top:50%;
+                left:50%;
+                transform: translate(-50%, -50%);
+                border-radius: 8px;
+                padding: 10px;
+                margin: 10px;
+                width: 60%;
+                height: 90%;
+            }
 
     </style>
     <!-- Add references to the eCSS file and JS library -->
