--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -14,6 +14,17 @@
         margin: 0;
         padding: 0;
       }
+        
+      #present{
+        position: fixed;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+        padding: 10px;
+        margin: 10px;
+        width: 60%;
+        height: 90%;
+        }
 
       #viewDiv {
         height: 80%;
@@ -21,19 +32,7 @@
         margin-left: auto;
         margin-right: auto;
         position: absolute;
-        }
-        
-      #present{
-          position: fixed;
-                top:50%;
-                left:50%;
-                transform: translate(-50%, -50%);
-                border-radius: 8px;
-                padding: 10px;
-                margin: 10px;
-                width: 60%;
-                height: 90%;
-            }
+        }    
 
     </style>
     <!-- Add references to the eCSS file and JS library -->
@@ -317,6 +316,9 @@
 
   </head>
   <body>
-    <div id="viewDiv"></div>
+    <div id="present">
+        <div id="viewDiv"></div>
+        <figure><img src="images/present.jpg" alt="present"/></figure>
+    </div>
   </body>
 </html>
