--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -15,7 +15,7 @@
         padding: 0;
       }
         
-      #present{
+      #wholelayout{
         position: fixed;
         top:50%;
         left:50%;
@@ -25,6 +25,15 @@
         width: 60%;
         height: 90%;
         }
+      
+      #present{
+        height: 90%;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        position: absolute;
+
+      }
 
       #viewDiv {
         height: 80%;
@@ -316,9 +325,9 @@
 
   </head>
   <body>
-    <div id="present">
+    <div id="wholelayout">
         <div id="viewDiv"></div>
-        <figure><img src="images/present.jpg" alt="present"/></figure>
+        <div id="present"><figure><img src="images/present.jpg" alt="present"/></figure></div>
     </div>
   </body>
 </html>
