--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -27,8 +27,8 @@
         }
       
       #present{
-        height: 800px;
-        width: 800px;
+        height: 200%;
+        width: 200%;
         margin-left: auto;
         margin-right: auto;
         position: absolute;
