--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -17,7 +17,12 @@
       h1{
           text-align: center;
           color: rgb(10, 186, 181);
-          padding: 30px;
+          padding: 15px;
+      }
+      h3{
+          text-align: center;
+          color: rgb(175, 238, 238);
+          padding: 15px;
       }
         
       #wholelayout{
@@ -39,7 +44,7 @@
         position: absolute;
         }    
     
-        #present{
+      #present{
         height: 200%;
         width: 200%;
         margin-left: auto;
@@ -332,6 +337,7 @@
   <body>
     <div id="wholelayout">
         <h1> My Valentine Present for YOU  &#128157; </h1>
+        <h3> Click the blue marker in the map to see my message! </h3>
         <div id="viewDiv"></div>
         <div id="present"><figure><img src="images/present.jpg" alt="present"/></figure></div>
     </div>
