--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -337,7 +337,7 @@
   <body>
     <div id="wholelayout">
         <h1> My Valentine Present for YOU  &#128157; </h1>
-        <h3> Click the blue marker in the map to see my message! </h3>
+        <h3> Please click the blue marker on the map to see my message! </h3>
         <div id="viewDiv"></div>
         <div id="present"><figure><img src="images/present.jpg" alt="present"/></figure></div>
     </div>
