--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -9,19 +9,19 @@
       html,
       body{
         font-family: 'Courier New', Courier, monospace;
-        background-color: rgb(255, 204, 204);
+        background-color: #0abab5;
         height: 100%;
         margin: 0;
         padding: 0;
       }
       h1{
           text-align: center;
-          color: rgb(64, 224, 208);
+          color: white;
           padding: 15px;
       }
       h3{
           text-align: center;
-          color: rgb(0, 127, 128);
+          color: white;
           padding: 5px;
       }
         
