--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -35,11 +35,12 @@
         }
 
       #viewDiv {
-        height: 80%;
-        width: 80%;
+        height: 65%;
+        width: 65%;
         margin-left: auto;
         margin-right: auto;
         position: absolute;
+        text-align: center;
         }    
     
     </style>
