--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -29,7 +29,7 @@
         left:50%;
         transform: translate(-50%, -50%);
         padding: 10px;
-        margin: 10px;
+        margin: 25%;
         width: 60%;
         height: 90%;
         }
@@ -37,8 +37,6 @@
       #viewDiv {
         height: 65%;
         width: 65%;
-        margin-left: auto;
-        margin-right: auto;
         position: absolute;
         text-align: center;
         }    
