--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -11,8 +11,6 @@
         font-family: 'Courier New', Courier, monospace;
         background-color: #0abab5;
         height: 100%;
-        margin: 0;
-        padding: 0;
       }
       h1{
           text-align: center;
@@ -28,8 +26,8 @@
         top:50%;
         left:50%;
         transform: translate(-50%, -50%);
-        padding: 10px;
-        margin: 25%;
+        padding: 10px 25% 10px 25%;
+        margin: 20%;
         width: 60%;
         height: 90%;
         }
