--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -326,6 +326,6 @@
         <h3> Please click the blue marker on the map to see my message! </h3>
         <div id="viewDiv"></div>
     </div>
-    <div id="present"><figure><img src="images/present.jpg" alt="present"/></figure></div>
+    <!-- <div id="present"><figure><img src="images/present.jpg" alt="present"/></figure></div>-->
   </body>
 </html>
