--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -26,8 +26,8 @@
         top:50%;
         left:50%;
         transform: translate(-50%, -50%);
-        padding: 10px 25% 10px 25%;
-        margin: 20%;
+        padding: 10px;
+        margin: 10px;
         width: 60%;
         height: 90%;
         }
@@ -35,8 +35,7 @@
       #viewDiv {
         height: 65%;
         width: 65%;
-        position: absolute;
-        text-align: center;
+        margin: auto;
         }    
     
     </style>
