--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -15,10 +15,14 @@
       h1{
           text-align: center;
           color: white;
+          margin: auto;
+          text-align: center;
         }
       h3{
           text-align: center;
           color: white;
+          margin: auto;
+          text-align: center;
         }
         
       #wholelayout{
@@ -320,9 +324,9 @@
 
   </head>
   <body>
+    <h1> My Valentine Present for YOU  &#128157; </h1>
+    <h3> Please click the blue marker on the map to see my message! </h3>
     <div id="wholelayout">
-        <h1> My Valentine Present for YOU  &#128157; </h1>
-        <h3> Please click the blue marker on the map to see my message! </h3>
         <div id="viewDiv"></div>
     </div>
     <!-- <div id="present"><figure><img src="images/present.jpg" alt="present"/></figure></div>-->
