--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -15,13 +15,13 @@
       h1{
           text-align: center;
           color: white;
-          margin: auto;
+          margin-top: 10px;
           text-align: center;
         }
       h3{
           text-align: center;
           color: white;
-          margin: auto;
+          margin-top: 30px;
           text-align: center;
         }
         
@@ -31,7 +31,7 @@
         left:50%;
         transform: translate(-50%, -50%);
         padding: 10px;
-        margin: 10px;
+        margin: 65px;
         width: 60%;
         height: 90%;
         }
