--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -25,22 +25,19 @@
           text-align: center;
         }
         
-      #wholelayout{
+      #viewDiv{
         position: fixed;
+        height: 65%;
+        width: 65%;
         top:50%;
         left:50%;
         transform: translate(-50%, -50%);
         padding: 10px;
-        margin: 65px;
+        margin-top: 65px;
         width: 60%;
         height: 90%;
-        }
-
-      #viewDiv {
-        height: 65%;
-        width: 65%;
         margin: auto;
-        }    
+        }  
     
     </style>
     <!-- Add references to the eCSS file and JS library -->
@@ -326,9 +323,8 @@
   <body>
     <h1> My Valentine Present for YOU  &#128157; </h1>
     <h3> Please click the blue marker on the map to see my message! </h3>
-    <div id="wholelayout">
-        <div id="viewDiv"></div>
-    </div>
+    <div id="viewDiv"></div>
+
     <!-- <div id="present"><figure><img src="images/present.jpg" alt="present"/></figure></div>-->
   </body>
 </html>
