--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -32,15 +32,15 @@
         transform: translate(-50%, -50%);
         padding: 10px;
         margin-top: 80px;
-        width: 50%;
+        width: 35%;
         height: 50%;
         margin: auto;
         }  
     
       #present{
-        position: fixed;
-        height: 70%;
-        width: 70%;
+        position: relative;
+        height: 200%;
+        width: 200%;
         top:50%;
         left:50%;
         transform: translate(-50%, -50%);
@@ -48,7 +48,7 @@
         margin-top: 60px;
         margin: auto;
       }
-      
+
     </style>
     <!-- Add references to the eCSS file and JS library -->
     <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css">
