--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -37,10 +37,10 @@
         margin: auto;
         }  
     
-      #present{
+      #viewDiv:after{
         position: relative;
-        height: 200%;
-        width: 200%;
+        height: 900px;
+        width: 900px;
         top:50%;
         left:50%;
         transform: translate(-50%, -50%);
