--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -24,8 +24,9 @@
           margin-top: 40px;
           text-align: center;
         }
-    #viewDiv{
-        position: relative;
+        
+      #viewDiv{
+        position: fixed;
         top:50%;
         left:50%;
         transform: translate(-50%, -50%);
@@ -34,10 +35,10 @@
         width: 35%;
         height: 50%;
         margin: auto;
-        }   
-
-      #viewDiv:after{
-        position: absolute;
+        }  
+    
+      #present{
+        position: relative;
         height: 900px;
         width: 900px;
         top:50%;
@@ -74,7 +75,7 @@
              map: map,
             center: [15.383492054344085, 43.978306123742975], // Longitude, latitude
             zoom: 16, // Zoom level
-            container: "viewDiv:after" // Div element
+            container: "viewDiv" // Div element
             });
 
             const graphicsLayer = new GraphicsLayer();
@@ -332,7 +333,7 @@
   <body>
     <h1> My Valentine Present for YOU  &#128157; </h1>
     <h3> Please click the blue marker on the map to see my message! </h3>
-    <div id="viewDiv:after"></div>
-    <div id="viewDiv"><figure><img src="images/present.jpg" alt="present"/></figure></div>
+    <div id="viewDiv"></div>
+    <div id="present"><figure><img src="images/present.jpg" alt="present"/></figure></div>
   </body>
 </html>
