--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -31,6 +31,7 @@
         width: 900px;
         top:50%;
         left:50%;
+        transform: translate(-50%, -50%);
         padding: 10px;
         margin-top: 60px;
         margin: auto;
@@ -40,6 +41,7 @@
         position: absolute;
         top:50%;
         left:50%;
+        transform: translate(-50%, -50%);
         padding: 10px;
         margin-top: 80px;
         width: 35%;
