--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -27,8 +27,6 @@
 
         #present{
         position: relative;
-        height: 900px;
-        width: 900px;
         top:50%;
         left:50%;
         transform: translate(-50%, -50%);
@@ -44,8 +42,8 @@
         transform: translate(-50%, -50%);
         padding: 10px;
         margin-top: 80px;
-        width: 35%;
-        height: 50%;
+        width: 30%;
+        height: 40%;
         margin: auto;
         }  
     
@@ -75,7 +73,7 @@
             const view = new MapView({
              map: map,
             center: [15.383492054344085, 43.978306123742975], // Longitude, latitude
-            zoom: 14, // Zoom level
+            zoom: 15, // Zoom level
             container: "viewDiv" // Div element
             });
 
@@ -334,7 +332,7 @@
   <body>
     <h1> My Valentine Present for YOU  &#128157; </h1>
     <h3> Please click the blue marker on the map to see my message! </h3>
-    <div id="present"><figure><img src="images/present.jpg" alt="present"/></figure></div>
+    <div id="present"><figure><img src="images/present.jpg" alt="present" width="900" height="900"></figure></div>
     <div id="viewDiv"></div>
   </body>
 </html>
