--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -26,7 +26,7 @@
         }
 
         #present{
-        position: relative;
+        position: absolute;
         top:50%;
         left:50%;
         transform: translate(-50%, -50%);
@@ -73,7 +73,7 @@
             const view = new MapView({
              map: map,
             center: [15.383492054344085, 43.978306123742975], // Longitude, latitude
-            zoom: 13.5, // Zoom level
+            zoom: 14, // Zoom level
             container: "viewDiv" // Div element
             });
 
@@ -332,7 +332,7 @@
   <body>
     <h1> My Valentine Present for YOU  &#128157; </h1>
     <h3> Please click the blue marker on the map to see my message! </h3>
-    <div id="present"><figure><img src="images/present.jpg" alt="present" width="900" height="900"></figure></div>
+    <div id="present"><figure><img src="images/present.jpg" alt="present" width="900" height="750"></figure></div>
     <div id="viewDiv"></div>
   </body>
 </html>
