--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -37,6 +37,7 @@
     
       #viewDiv{
         position: absolute;
+        top:50%;
         left:50%;
         transform: translate(-50%, -50%);
         padding: 10px;
@@ -333,7 +334,7 @@
   <body>
     <h1> My Valentine Present for YOU  &#128157; </h1>
     <h3> Please click the blue marker on the map to see my message! </h3>
-    <div id="present"><figure><img src="images/present.jpg" alt="present" width="200%" height="200%"></figure></div>
+    <div id="present"><figure><img src="images/present.jpg" alt="present" width="200%" height="400%"></figure></div>
     <div id="viewDiv"></div>
   </body>
 </html>
