--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>Boat Rides with Me! </title>
+    <title>Boat Tour with Me! </title>
 
     <!-- The viewDiv is the element displays the map and its CSS resets any browser settings -->
     <style>
@@ -37,7 +37,7 @@
     
       #viewDiv{
         position: absolute;
-        top:65%;
+        top:62%;
         left:50%;
         transform: translate(-50%, -50%);
         padding: 10px;
@@ -332,7 +332,8 @@
   </head>
   <body>
     <h1> My Valentine Present for YOU  &#128157; </h1>
-    <h3> Please click the blue marker on the map to see my message! </h3>
+    <h3> Let me take you to the Island of Love in Croatia.  </h3>
+    <h5> Please click the blue marker on the map to see my message! </h5>
     <div id="present"><figure><img src="images/present.jpg" alt="present" width="920px" height="700px"></figure></div>
     <div id="viewDiv"></div>
   </body>
