--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -21,9 +21,16 @@
       h3{
           text-align: center;
           color: white;
+          margin-top: 30px;
+          text-align: center;
+        }
+      h5{
+          text-align: center;
+          color: white;
           margin-top: 40px;
           text-align: center;
         }
+
 
         #present{
         position: absolute;
@@ -334,7 +341,7 @@
     <h1> My Valentine Present for YOU  &#128157; </h1>
     <h3> Let me take you to the Island of Love in Croatia.  </h3>
     <h5> Please click the blue marker on the map to see my message! </h5>
-    <div id="present"><figure><img src="images/present.jpg" alt="present" width="920px" height="700px"></figure></div>
+    <div id="present"><figure><img src="images/present.jpg" alt="present" width="920px" height="680px"></figure></div>
     <div id="viewDiv"></div>
   </body>
 </html>
