--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -24,10 +24,10 @@
           margin-top: 30px;
           text-align: center;
         }
-      h5{
+      h4{
           text-align: center;
           color: white;
-          margin-top: 40px;
+          margin-top: 35px;
           text-align: center;
         }
 
@@ -339,7 +339,7 @@
   <body>
     <h1> My Valentine Present for YOU  &#128157; </h1>
     <h3> Let me take you to the Island of Love in Croatia.  </h3>
-    <h5> Please click the blue marker on the map to see my message! </h5>
+    <h4> Please click the blue marker on the map and expand to see my message! </h4>
     <div id="present"><figure><img src="images/present.jpg" alt="present" width="920px" height="680px"></figure></div>
     <div id="viewDiv"></div>
   </body>
