--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -11,6 +11,8 @@
         font-family: 'Courier New', Courier, monospace;
         background-color: #0abab5;
         height: 100%;
+        border: 2px yellowgreen;
+        outline-style: dotted;
       }
       h1{
           text-align: center;
@@ -27,7 +29,7 @@
       h4{
           text-align: center;
           color: white;
-          margin-top: 35px;
+          margin-top: 32px;
           text-align: center;
         }
 
