--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -51,7 +51,12 @@
         height: 40%;
         margin: auto;
         }  
-    
+      footer {
+        text-align: center;
+        padding: 3px;
+        background-color: #0AbAB5;
+        color: white;
+        }
 
     </style>
     <!-- Add references to the eCSS file and JS library -->
@@ -337,10 +342,13 @@
 
   </head>
   <body>
-    <h1> My Valentine Present for YOU  &#128157; </h1>
+    <h1> &#128157; My Valentine Present for YOU  &#128157; </h1>
     <h3> Let me take you to the Island of Love in Croatia.  </h3>
     <h4> Please click the blue marker on the map and expand to see my message! </h4>
-    <div id="present"><figure><img src="images/present.jpg" alt="present" width="925px" height="680px"></figure></div>
+    <div id="present"><figure><img src="images/present.jpg" alt="present" width="930px" height="680px"></figure></div>
     <div id="viewDiv"></div>
+    <footer>
+        <p>Created by your lover. I love you so much. You are my gift &#127872;</p>
+      </footer>
   </body>
 </html>
