--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -53,6 +53,10 @@
         }  
       footer {
         text-align: center;
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
         padding: 3px;
         background-color: #0AbAB5;
         color: white;
@@ -349,6 +353,6 @@
     <div id="viewDiv"></div>
     <footer>
         <p>Created by your lover. I love you so much. You are my gift &#127872;</p>
-      </footer>
+    </footer>
   </body>
 </html>
