--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -51,7 +51,7 @@
         height: 40%;
         margin: auto;
         }  
-      footer {
+      .footer {
         text-align: center;
         position: fixed;
         left: 0;
@@ -351,8 +351,8 @@
     <h4> Please click the blue marker on the map and expand to see my message! </h4>
     <div id="present"><figure><img src="images/present.jpg" alt="present" width="930px" height="680px"></figure></div>
     <div id="viewDiv"></div>
-    <footer>
+    <div class="footer">
         <p>Created by your lover. I love you so much. You are my gift &#127872;</p>
-    </footer>
+    </div>
   </body>
 </html>
