--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -58,7 +58,7 @@
         bottom: 0;
         width: 100%;
         padding: 3px;
-        background-color: #0AbAB5;
+        background-color: #8fd1d0;
         color: white;
         }
 
