--- a/searchForAnAddress.html
+++ b/searchForAnAddress.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>ArcGIS API for JavaScript Tutorials: Display a map</title>
+    <title>ArcGIS API for JavaScript Tutorials: Search for an Address </title>
 
     <!-- The viewDiv is the element displays the map and its CSS resets any browser settings -->
     <style>
@@ -25,8 +25,9 @@
             "esri/config",
             "esri/Map", 
             "esri/views/MapView",
+            
             "esri/widgets/Search"
-            ], function (esriConfig,Map, MapView, Search) {
+            ], function (esriConfig, Map, MapView, Search) {
 
             esriConfig.apiKey = "AAPK6a7fbbd47cc543beb5dd6f9dca65c788i4dAOKVZEHmUy1heCU7lV7w1AVMdIaV7oMkMvfEwTAmxqpzRDBzcxSvGImZHSQ6u";
 
