--- a/displayYourLocation.html
+++ b/displayYourLocation.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>ArcGIS API for JavaScript Tutorials: Display a map</title>
+    <title>Display your location</title>
 
     <!-- The viewDiv is the element displays the map and its CSS resets any browser settings -->
     <style>
