you gotta be final touch bro

--- a/ValentineTheme.html
+++ b/ValentineTheme.html
@@ -116,7 +116,7 @@
             const attributes = {
             color: [255, 204, 229],
             Name: "Galesnjak Island",
-            Description: "The area surface of this island is 132km^2. <br> I love you 100000000 times the area surface. "
+            Description: "The area surface of this island is 132km^2. <br> I love you 100000000 times more than the area surface. "
             }
 
             const pointGraphic = new Graphic({
